Fixed keywrods in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license       = "Apache-2.0"
 #homepage      = ""
 repository    = "https://github.com/zaari/nmea-parser"
 documentation = "https://docs.rs/nmea-parser"
-keywords      = ["nmea", "ais", "gnss", "gps", "glonass", "galileo", "baudou", "navic", "qzss"]
+keywords      = ["nmea", "ais", "gnss", "gps"]
 categories    = ["parsing"]
 readme        = "README.md"
 edition       = "2018"
