--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name          = "nmea-parser"
-version       = "0.1.0"
+version       = "1.1.1"
 publish       = true
-description   = "Rust NMEA sentence parser for AIS and GNSS messages. Supports AIS class A and B types. Identifies GPS, GLONASS, Galileo, BauDou, Navic and QZSS satellite systems."
+description   = "Rust NMEA sentence parser for AIS and GNSS messages."
 authors       = ["Timo Saarinen <zaari@mailbox.org>"]
 license       = "Apache-2.0"
 #homepage      = ""
