--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name          = "nmea-parser"
-version       = "0.2.0"
-publish       = true
+version       = "0.3.0-dev"
+publish       = false
 description   = "Rust NMEA sentence parser for AIS and GNSS messages."
 authors       = ["Timo Saarinen <zaari@mailbox.org>"]
 license       = "Apache-2.0"
