--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name          = "nmea-parser"
-version       = "0.3.0-dev"
-publish       = false
-description   = "Rust NMEA sentence parser for AIS and GNSS messages."
+version       = "0.3.0"
+publish       = true
+description   = "NMEA parser for AIS and GNSS sentences"
 authors       = ["Timo Saarinen <zaari@mailbox.org>"]
 license       = "Apache-2.0"
 repository    = "https://github.com/zaari/nmea-parser"
