--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name          = "nmea-parser"
-version       = "0.3.1"
-publish       = true
+version       = "0.4.0-dev"
+publish       = false
 description   = "NMEA parser for AIS and GNSS sentences"
 authors       = ["Timo Saarinen <zaari@mailbox.org>"]
 license       = "Apache-2.0"
