Implementation for AIS VDM/VDO sentence type 10 parsing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ keywords      = ["nmea", "ais", "gnss", "gps"]
 categories    = ["parsing"]
 readme        = "README.md"
 edition       = "2018"
+#rust-version  = "1.44"
 
 [dependencies]
 bitvec     = "0.19.3"
