--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ edition       = "2018"
 bitvec     = "0.19.3"
 chrono     = "0.4.19"
 log        = "0.4.11"
+
+[dev-dependencies]
 assert     = "0.7.4"
 
 [badges]
