--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name          = "nmea-parser"
-version       = "0.5.0"
-publish       = true
+version       = "0.6.0-dev"
+publish       = false
 description   = "NMEA 0183 parser for AIS and GNSS sentences"
 authors       = ["Timo Saarinen <zaari@mailbox.org>"]
 license       = "Apache-2.0"
@@ -15,6 +15,7 @@ edition       = "2018"
 
 [dependencies]
 bitvec     = "0.19.3"
+num-traits = "0.2.14"
 chrono     = "0.4.19"
 log        = "0.4.11"
 
