--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name          = "nmea-parser"
-version       = "0.7.0"
-publish       = true
+version       = "0.8.0-dev"
+publish       = false
 description   = "NMEA 0183 parser for AIS and GNSS sentences"
 authors       = ["Timo Saarinen <zaari@mailbox.org>"]
 license       = "Apache-2.0"
@@ -14,7 +14,7 @@ edition       = "2018"
 #rust-version  = "1.43"
 
 [dependencies]
-bitvec     = "0.20.0"
+bitvec     = "0.20.1"
 num-traits = "0.2.14"
 chrono     = "0.4.19"
 log        = "0.4.11"
