--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ root = true
 [*]
 end_of_line = lf
 charset = utf-8
-insert_final_newline = true
+insert_final_newline = false
 trim_trailing_whitespace = true
 
 [*.rs]
@@ -22,4 +22,3 @@ max_line_length = 100
 [*.json]
 indent_style = space
 indent_size = 2
-
