--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ bitvec     = { version = "0.22.3", default-features = false, features = ["alloc"
 num-traits = { version = "0.2.14", default-features = false }
 chrono     = "0.4.19"
 log        = "0.4.14"
+hashbrown  = "0.11"
 
 [dev-dependencies]
 assert     = "0.7.4"
