--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ edition       = "2018"
 [dependencies]
 bitvec     = { version = "0.22.3", default-features = false, features = ["alloc"] }
 num-traits = { version = "0.2.14", default-features = false }
-chrono     = "0.4.19"
+chrono     = { version = "0.4.19", default-features = false }
 log        = "0.4.14"
 hashbrown  = "0.11"
 
