Document that this crate can used be with no_std

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ authors       = ["Timo Saarinen <zaari@mailbox.org>"]
 license       = "Apache-2.0"
 repository    = "https://github.com/zaari/nmea-parser"
 documentation = "https://docs.rs/nmea-parser"
-keywords      = ["nmea", "ais", "gnss", "gps"]
+keywords      = ["nmea", "ais", "gnss", "gps", "no_std"]
 categories    = ["parsing"]
 readme        = "README.md"
 edition       = "2018"
