--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nmea-parser"
-version = "0.10.0-dev"
+version = "0.10.0"
 publish = false
 description = "NMEA 0183 parser for AIS and GNSS sentences"
 authors = ["Timo Saarinen <zaari@mailbox.org>"]
@@ -11,7 +11,7 @@ keywords = ["nmea", "ais", "gnss", "gps", "no_std"]
 categories = ["parsing"]
 readme = "README.md"
 edition = "2018"
-#rust-version  = "1.43"
+rust-version  = "1.56"
 
 [dependencies]
 bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
