--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "nmea-parser"
 version = "0.10.0"
-publish = false
+publish = true
 description = "NMEA 0183 parser for AIS and GNSS sentences"
 authors = ["Timo Saarinen <zaari@mailbox.org>"]
 license = "Apache-2.0"
