--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,10 @@ rust-version  = "1.56"
 [dependencies]
 bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
 num-traits = { version = "0.2.15", default-features = false }
-chrono = { version = "0.4.22", default-features = false }
+chrono = { version = "0.4.26", default-features = false, features = ["alloc"] }
 log = "0.4.17"
 hashbrown = "0.12.3"
+serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
 assert = "0.7.4"
