--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "nmea-parser"
-version = "0.11.0"
-publish = true
+version = "0.12.0-dev"
+publish = false
 description = "NMEA 0183 parser for AIS and GNSS sentences"
 authors = ["Timo Saarinen <zaari@mailbox.org>"]
 license = "Apache-2.0"
